Avalara Fullqa/src/Geopointe/objects/GP_Map_Layer__c.object
<CustomObject>
    <fields>
        <fullName>Border_Opacity__c</fullName>
        <label>Border Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Set__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Set</label>
        <referenceTo>Data_Set_Object__c</referenceTo>
        <relationshipLabel>Geopointe Map Layers</relationshipLabel>
        <relationshipName>Map_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fill_Opacity__c</fullName>
        <label>Fill Opacity</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>GP_Folder__c</referenceTo>
        <relationshipLabel>Geopointe Map Layers</relationshipLabel>
        <relationshipName>Map_Layers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legend__c</fullName>
        <label>Legend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Personal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thematic</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Geopointe Map Layer</label>
    <nameField>
        <label>GP Map Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Map Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Data_Layer_Detail_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	LOWER(TEXT(Type__c)) = &apos;datalayer&apos;,
	ISBLANK(Detail__c)
)</errorConditionFormula>
        <errorDisplayField>Detail__c</errorDisplayField>
        <errorMessage>Detail__c field is required for data layers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Data_Layer_Folder_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	LOWER(TEXT(Type__c)) = &apos;datalayer&apos;,
	AND(NOT(Personal__c), ISBLANK(Folder__c))
)</errorConditionFormula>
        <errorDisplayField>Folder__c</errorDisplayField>
        <errorMessage>Data layers must be associated with a folder if they are not personal.</errorMessage>
    </validationRules>
</CustomObject>